<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpage"
    tools:context="com.example.aleksandrakorolczuk1.dtravel.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/welcometo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/welcome_to"
        android:textSize="50sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/dreamtravel" />

    <TextView
        android:id="@+id/dreamtravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/dreamtravel"
        android:textSize="50sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="61dp"
        app:layout_constraintBottom_toTopOf="@+id/next" />




    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp"
        app:layout_constraintHorizontal_bias="0.995" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/startdreaming"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp" />


    <ImageView
        android:id="@+id/cargraphic"
        android:layout_width="143dp"
        android:layout_height="184dp"
        android:layout_marginTop="55dp"
        android:rotation="-40"
        android:src="@drawable/cargraphic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="27dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/planegraphic"
        android:layout_width="143dp"
        android:layout_height="184dp"
        android:layout_marginTop="139dp"
        android:rotation="20"
        android:src="@drawable/planegraphic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.41" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signed_out"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        tools:visibility="visible">


    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/disconnect"
        android:theme="@style/ThemeOverlay.MyDarkButton" />
</LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp"
        app:layout_constraintRight_toLeftOf="@+id/login_button"
        android:layout_marginRight="67dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />


</android.support.constraint.ConstraintLayout>
