<?xml version="1.0" encoding="utf-8"?>


        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:id="@+id/fragment_goal_id"
            android:layout_height="match_parent"
            android:background="@drawable/page"
            android:windowSoftInputMode="stateUnchanged"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/calculate"
        android:textSize="36sp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="88dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="175dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="34dp" />


    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="48dp"
        android:layout_marginTop="91dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/delete"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_goal_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/start_saving"

        android:textSize="30sp"
        android:layout_marginBottom="33dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="123dp"
        android:padding="20dp"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/whatisyour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_your"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/goal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="13" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="Long term?"
                android:textSize="24sp" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/longterm"
                style="@style/Material.Drawable.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="0dp"
                android:paddingBottom="20dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Flights"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/flights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:hint="0"
                android:inputType="number" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Insurance"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/insurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:hint="0"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Food"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:hint="0"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Transport"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:hint="0"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tourists attractions"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/entrance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:hint="0"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Other..."
                android:textSize="24sp" />

            <EditText
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:hint="0"
                android:inputType="number" />
        </TableRow>


    </TableLayout>

</android.support.constraint.ConstraintLayout>
